# monarch-ingest

./: .gitignore  404.html  Dockerfile  Jenkinsfile  Jenkinsfile-download  Jenkinsfile-indexer  Jenkinsfile-neo4j  Jenkinsfile-redo-solr  LICENSE  Makefile  README.md  build_mokg.sh  docker-compose-ssl.yaml  docker-compose.yaml  dot_env_template  download.yaml  dynamic_pipeline.py  experimenting_with_drugs.md  generate_pipeline.py  index.html  ingests.yaml  merge.yaml  mkdocs.yaml  mkdocs.yml  monarch_ingest  neo-transform.yaml  neo4j-transform.yaml  neo4j-v3-transform.yaml  pipeline.py  pyproject.toml  sitemap.xml  test_config.txt  workspace.yaml
.github/workflows/: action.yaml  pages.yaml  test.yml
Create-an-Ingest/: index.html
Create-an-Ingest/1. Propose/: index.html
Create-an-Ingest/2. Configure/: index.html
Create-an-Ingest/3. Document/: index.html
Create-an-Ingest/4. Implement/: index.html
Create-an-Ingest/5. Test/: index.html
Sources/Alliance/: index.html
Sources/CTD/: index.html
Sources/Dictybase/: index.html
Sources/Flybase/: index.html
Sources/GOA/: index.html
Sources/HGNC/: index.html
Sources/HPOA/: index.html
Sources/MGI/: index.html
Sources/NCBI/: index.html
Sources/OMIM/: index.html
Sources/Panther/: index.html
Sources/Pombase/: index.html
Sources/RGD/: index.html
Sources/Reactome/: index.html
Sources/SGD/: index.html
Sources/String/: index.html
Sources/Xenbase/: index.html
Sources/ZFIN/: index.html
biolink/pydantic/: README.md  model.py
docs/: 404.html  CLI.md  index.html  index.md  sitemap.xml
docs/CLI/: index.html
docs/Create-an-Ingest/: 1. Propose.md  2. Configure.md  3. Document.md  4. Implement.md  5. Test.md  Configure.md  Document.md  Implement.md  Propose.md  Test.md  Validate.md  index.html  index.md
docs/KG-Build-Process/: kg-build-process.md
docs/Principles/: index.md  modeling-principles.md
docs/Sources/: Alliance.md  BGee.md  CTD.md  Dictybase.md  Flybase.md  GOA.md  HGNC.md  HPOA.md  MGI.md  NCBI.md  OMIM.md  Panther.md  Phenio.md  Pombase.md  RGD.md  Reactome.md  SGD.md  String.md  Xenbase.md  ZFIN.md  alliance.md  bgee.md  biogrid.md  ctd.md  dictybase.md  flybase.md  go.md  goa.md  hgnc.md  hpoa.md  index.html  index.md  mgi.md  ncbi.md  panther.md  phenio.md  pombase.md  reactome.md  rgd.md  sgd.md  (+3 more)
docs/Usage/: index.html
docs/ingests/: alliance.md  ctd.md  ebi.md  flybase.md  goa.md  hgnc.md  hpoa.md  mgi.md  ncbi.md  omim.md  orthology.md  panther.md  pombase.md  reactome.md  rgd.md  sgd.md  string.md  xenbase.md  zfin.md
docs/kozathon/: setup.md
docs/operations/: merge.md
docs/search/: search_index.json
docs/tutorials/: add-documentation.md  configure-ingest.md  implement-ingest.md  test-ingest.md  validate-output.md
dumps/: README.md
ingest_template/: example_test.py  source-file-template-csv.py  source-file-template-csv.yaml  source-file-template-json.py  source-file-template-json.yaml
mingestibles/PomBase/: gene-to-phenotype.py  gene-to-phenotype.yaml  metadata.yaml
mingestibles/RGD/: gene-to-phenotype.py  gene-to-phenotype.yaml  metadata.yaml
mingestibles/Xenbase/: gene-information.yaml  gene-literature.py  gene-literature.yaml  metadata.yaml
mingestibles/alliance/: alliance.md  gene2phenotype.py  gene2phenotype.yaml  gene_information.py  metadata.yaml
mingestibles/maps/: alliance-gene.yaml  genepage-2-gene.yaml  rgd-gene.yaml
mingestibles/pombase/: gene2phenotype.py  gene2phenotype.yaml  metadata.yaml  pombase.md
mingestibles/rgd/: gene2phenotype.py  gene2phenotype.yaml  metadata.yaml
mingestibles/xenbase/: gene2phenotype.py  gene2phenotype.yaml  gene_information.py  xenbase.md
mingestibles/zfin/: gene2phenotype.py  gene2phenotype.yaml  metadata.yaml  zfin.md
model/: biolink.py
monarch-env/: pyvenv.cfg
monarch_ingest/: cli_utils.py  download.yaml  helper.py  ingest_pipeline.py  ingests.yaml  main.py  pipeline.py  translation_table.yaml
monarch_ingest/alliance/: gene.py  gene.yaml  gene2disease.py  gene2disease.yaml  gene2phenotype.py  gene2phenotype.yaml  gene_information.py  gene_information.yaml  gene_to_disease.py  gene_to_disease.yaml  gene_to_expression.py  gene_to_expression.yaml  gene_to_phenotype.py  gene_to_phenotype.yaml  literature.py  literature.yaml  metadata.yaml  publication.py  publication.yaml  source_translation.py  utils.py
monarch_ingest/ctd/: chemical_to_disease.py  chemical_to_disease.yaml
monarch_ingest/ebi/: EBI Gene2Phenotype Model.pptx  ebi_g2p.yaml  gene_to_phenotype.py  gene_to_phenotype.yaml  utils.py  (+1 more)
neo4j/: README.md  neo4j.conf
notebooks/: KG_diff_using_stats_yaml.ipynb  duckdb-denormalize.ipynb  duckdb-merge.ipynb  polars-denormalize.ipynb  v2-graph-stats.ipynb
scripts/: add_association_copyfields.sh  add_entity_copyfields.sh  add_entity_fieldtypes.sh  add_fieldtypes.sh  add_update_processor.sh  after_download.sh  autocomplete-fieldtype.json  bdc_kg_coverage_report.py  create_github_release.py  download_modular.py  download_monarch_neo4j_dump.sh  download_monarch_scigraph_neo4j_dump.sh  extend_denormalized_nodes.sql  frequency_update_processor.js  generate_gene_connection_report.sql  generate_mondo_reports.sql  generate_reports.sql  grounding-fieldtype.json  kgx_transforms.sh  latest_release.sh  load_and_boot.sh  load_and_boot_neo4j.sh  load_neo4j.sh  load_solr.sh  load_sqlite.sh  neo4j_load_and_dump.sh  preanalyzed-fieldtype.json  sortable-float-fieldtype.json  text-fieldtype.json  update-dev-solr.py  update_latest_release.sh  validate_infores.sql
search/: search_index.json
slurm_job_dir/: sync_mokg_output_to_neo4j.sbatch
solr/: association-index.yaml  entity-index.yaml
source_template/: metadata.yaml  source-file-template-csv.py  source-file-template-csv.yaml  source-file-template-json.py  source-file-template-json.yaml
tests/: conftest.py  test_cli.py  test_export_utils.py  test_ingest_utils.py  test_mingestibles.py  test_qc_validation.py  test_release_metadata.py  test_yaml_configs.py
(+452 files in other folders)
