[project]
name = "monarch-ingest"
version = "0.8.0"
description = ""
authors = [
    {name="The Monarch Initiative",email="info@monarchinitiative.org"},
    {name="Kevin Schaper", email="kevinschaper@gmail.com"},
    {name="Victoria Soesanto", email="victoria.soesanto@cuanschutz.edu"},
    {name="Glass Elsarboukh", email="g.elsarboukh@gmail.com"},
    {name="Kent Shefchek", email="kent@tislab.org"},
    {name="Richard Bruskiewich", email="richard.bruskiewich@delphinai.com"},
]
packages = [
    { include = "monarch_ingest", from = "src" },
]
requires-python=">=3.10,<4,<=3.14"

dependencies = [
    "biolink-model>=4.3.6",
    "bmt>=1.0.15,<2",
    "kghub-downloader>=0.4.5,<1",
    "kgx>=2.6.0,<3",
    "linkml>=1.9,<2", #TODO: upgrade this to 1.11 when biolink-model makes that upgrade. https://github.com/biolink/biolink-model/issues/1726
    "linkml-solr==0.2.0",
    "multi-indexer==0.0.5",
    # Other Dependencies,
    "botocore>=1.31,<2",
    "importlib-metadata>=4.6.1",
    "loguru",
    "pydantic>=2.5,<3",
    "sh>=1.14.3,<2",
    "typer>=0.20,<1",
    "yamllint>=1.35.1,<2",
    "linkml-runtime>=1.7.5,<2",
    "pandas>=2.0.3",
    "closurizer==0.8.1",
    "notebook>=7.3.2,<8",
    "duckdb>=1.3.0,<2",
    "pystow>=0.5.4,<1",
    "koza>=2,<2.3.1,<3",
]

[project.optional-dependencies]

dev = [
    "pytest>=8.1.1,<9",
    "mkdocs>=1.4,<2",
    "mkdocs-material>=9.5",
    "black>=24.3,<25",
    "ruff",
]

[project.scripts]
ingest = "monarch_ingest.main:typer_app"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.ruff]
line-length = 120
ignore = [
    "F541", # f-strings with no placeholders

]

lint.fixable = ["ALL"]

# Select or ignore from https://docs.astral.sh/ruff/rules/
lint.select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort 
    "S",  # flake8-bandit
    "W",  # Warning
    "C90", #MCcabe
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["F811"] # redefinition of unused imports (mock_koza)

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.uv.sources]
kgx = {git = "https://github.com/biolink/kgx.git", branch="master"} #TODO: Delete this line once kgx releases their next version (2.7) - 
